[package]
name = 'pallet-wyvern-exchange-core'
version = '2.0.0'
description = 'NFT Dex wyvern exchange core'
edition = '2018'
authors = ['vlbos <https://github.com/vlbos>']
homepage = ''
repository = 'https://github.com/vlbos/orderbook/'
license = 'Unlicense'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'


[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }
timestamp = { git = "https://github.com/paritytech/substrate", package = "pallet-timestamp", default-features = false }
balances = { git = "https://github.com/paritytech/substrate", package = "pallet-balances", default-features = false }
serde = { features = ['derive'], optional = true, version = '1.0.119' }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false }

[features]
default = ['std']
std = [
    "serde",
    'codec/std',
'scale-info/std',
    'frame-support/std',
    'frame-system/std',
	"pallet-contracts/std",
    'timestamp/std',
    'balances/std',
	"sp-core/std",
    
]
