[package]
name = 'pallet-wyvern-exchange'
version = '2.0.0'
description = 'NFT Dex wyvern exchange'
edition = '2021'
authors = ['vlbos <https://github.com/vlbos>']
homepage = ''
repository = 'https://github.com/vlbos/orderbook/'
license = 'Unlicense'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false,git = "https://github.com/paritytech/substrate.git"}
frame-system = { default-features = false,git = "https://github.com/paritytech/substrate.git" }
frame-benchmarking = { default-features = false,git = "https://github.com/paritytech/substrate.git", optional = true }
sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }
timestamp = { git = "https://github.com/paritytech/substrate", package = "pallet-timestamp", default-features = false }
serde = { features = ['derive'], optional = true, version = '1.0.119' }
balances = { git = "https://github.com/paritytech/substrate", package = "pallet-balances", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false }

[dev-dependencies]
sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
[dependencies.exchange-core]
default-features = false
package = 'pallet-wyvern-exchange-core'
path = '../wyvern-exchange-core'

[features]
default = ['std']
std = [
    "serde",
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'timestamp/std',
    'balances/std',

]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
