[package]
name = "orderbook-runtime-api"
version = "2.0.0"
authors = ['']
edition = "2018"
license = "unlicense"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'
[dependencies]

sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[dependencies.orderbook]
default-features = false
package = 'pallet-orderbook'
path = '..'
version = '2.0.0'

[features]
default = ["std"]
std = [
	"sp-api/std",
'sp-std/std',
  "orderbook/std"
]
