[package]
name = "wyvern-exchange-core-runtime-api"
version = "2.0.0"
authors = ['']
edition = "2018"
license = "unlicense"

[dependencies.wyvern-exchange-core]
default-features = false
package = 'pallet-wyvern-exchange-core'
path = '..'
version = '2.0.0'

[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }


[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
	"sp-api/std",
'sp-std/std',
"wyvern-exchange-core/std"
]
